--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,11 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOpti`enter code here`ons": {
+     "lib": ["es6", "dom"],
+     "noImplicitAny": true,
+     "noImplicitThis": true,
+     "strictNullChecks": true
+   }
 }
